// Use these for links to issue and pulls. Note issues and pulls redirect one to
// each other on Github, so don't worry too much on using the right prefix.
//:issue:           https://github.com/elastic/elasticsearch/issues/
//:ml-issue:        https://github.com/elastic/ml-cpp/issues/
//:pull:            https://github.com/elastic/elasticsearch/pull/
//:ml-pull:         https://github.com/elastic/ml-cpp/pull/

= Elasticsearch Release Notes

////
// To add a release, copy and paste the following text,  uncomment the relevant
// sections, and add a link to the new section in the list of releases at the
// top of the page. Note that release subheads must be floated and sections
// cannot be empty.
// TEMPLATE:

// == {es} version n.n.n

//=== Breaking Changes

//=== Deprecations

//=== New Features

//=== Enhancements

//=== Bug Fixes

//=== Regressions

== {es} version 7.0.0-alpha2

=== Bug Fixes

* Fixes CPoissonMeanConjugate sampling error. {ml-pull}335[#335]
//NOTE: Remove from final 7.0.0 release notes if already in 6.x

== {es} version 7.0.0-alpha1

== {es} version 6.7.0

=== Enhancements

* Adjust seccomp filter for Fedora 29. {ml-pull}354[#354]
