@@ -7,6 +7,7 @@
 
 #include <core/CJsonOutputStreamWrapper.h>
 #include <core/COsFileFuncs.h>
+#include <core/CStatistics.h>
 #include <core/CStringUtils.h>
 #include <core/CoreTypes.h>
 
@@ -58,6 +59,9 @@ CppUnit::Test* CBackgroundPersisterTest::suite() {
     suiteOfTests->addTest(new CppUnit::TestCaller<CBackgroundPersisterTest>(
         "CBackgroundPersisterTest::testCategorizationOnlyPersist",
         &CBackgroundPersisterTest::testCategorizationOnlyPersist));
+    suiteOfTests->addTest(new CppUnit::TestCaller<CBackgroundPersisterTest>(
+        "CBackgroundPersisterTest::testDetectorBackgroundPersistStaticsConsistency",
+        &CBackgroundPersisterTest::testDetectorBackgroundPersistStaticsConsistency));
 
     return suiteOfTests;
 }
@@ -73,6 +77,10 @@ void CBackgroundPersisterTest::testDetectorPersistOver() {
 void CBackgroundPersisterTest::testDetectorPersistPartition() {
     this->foregroundBackgroundCompCategorizationAndAnomalyDetection(
         "testfiles/new_mlfields_partition.conf");
+}
+
+void CBackgroundPersisterTest::testDetectorBackgroundPersistStaticsConsistency() {
+    this->foregroundBackgroundCompAnomalyDetectionAfterStaticsUpdate("testfiles/new_mlfields_over.conf");
 }
 
 void CBackgroundPersisterTest::testCategorizationOnlyPersist() {
@@ -225,6 +233,102 @@ void CBackgroundPersisterTest::foregroundBackgroundCompCategorizationAndAnomalyD
         ml::api::CSingleStreamDataAdder foregroundDataAdder(foregroundStreamPtr);
         CPPUNIT_ASSERT(firstProcessor->persistState(foregroundDataAdder));
         foregroundSnapshotId = snapshotId;
+    }
+
+    std::string backgroundState = backgroundStream->str();
+    std::string foregroundState = foregroundStream->str();
+
+    // The snapshot ID can be different between the two persists, so replace the
+    // first occurrence of it (which is in the bulk metadata)
+    CPPUNIT_ASSERT_EQUAL(size_t(1), ml::core::CStringUtils::replaceFirst(
+                                        backgroundSnapshotId, "snap", backgroundState));
+    CPPUNIT_ASSERT_EQUAL(size_t(1), ml::core::CStringUtils::replaceFirst(
+                                        foregroundSnapshotId, "snap", foregroundState));
+
+    // Replace the zero byte separators so the expected/actual strings don't get
+    // truncated by CppUnit if the test fails
+    std::replace(backgroundState.begin(), backgroundState.end(), '\0', ',');
+    std::replace(foregroundState.begin(), foregroundState.end(), '\0', ',');
+
+    CPPUNIT_ASSERT_EQUAL(backgroundState, foregroundState);
+}
+
+void CBackgroundPersisterTest::foregroundBackgroundCompAnomalyDetectionAfterStaticsUpdate(
+    const std::string& configFileName) {
+    // Start by creating processors with non-trivial state
+
+    static const ml::core_t::TTime BUCKET_SIZE(3600);
+    static const std::string JOB_ID("job");
+
+    std::string inputFilename("testfiles/big_ascending.txt");
+
+    // Open the input and output files
+    std::ifstream inputStrm(inputFilename.c_str());
+    CPPUNIT_ASSERT(inputStrm.is_open());
+
+    std::ofstream outputStrm(ml::core::COsFileFuncs::NULL_FILENAME);
+    CPPUNIT_ASSERT(outputStrm.is_open());
+
+    ml::model::CLimits limits;
+    ml::api::CFieldConfig fieldConfig;
+    CPPUNIT_ASSERT(fieldConfig.initFromFile(configFileName));
+
+    ml::model::CAnomalyDetectorModelConfig modelConfig =
+        ml::model::CAnomalyDetectorModelConfig::defaultConfig(BUCKET_SIZE);
+
+    std::ostringstream* backgroundStream(nullptr);
+    ml::api::CSingleStreamDataAdder::TOStreamP backgroundStreamPtr(
+        backgroundStream = new std::ostringstream());
+    ml::api::CSingleStreamDataAdder backgroundDataAdder(backgroundStreamPtr);
+    // The 300 second persist interval is irrelevant here - we bypass the timer
+    // in this test and kick off the background persistence chain explicitly
+    ml::api::CBackgroundPersister backgroundPersister(300, backgroundDataAdder);
+
+    std::string snapshotId;
+    std::size_t numDocs(0);
+
+    std::string backgroundSnapshotId;
+    std::string foregroundSnapshotId;
+
+    std::ostringstream* foregroundStream(nullptr);
+    ml::api::CSingleStreamDataAdder::TOStreamP foregroundStreamPtr(
+        foregroundStream = new std::ostringstream());
+    {
+        ml::core::CJsonOutputStreamWrapper wrappedOutputStream(outputStrm);
+        ml::api::CJsonOutputWriter outputWriter(JOB_ID, wrappedOutputStream);
+
+        ml::api::CAnomalyJob job(
+            JOB_ID, limits, fieldConfig, modelConfig, wrappedOutputStream,
+            boost::bind(&reportPersistComplete, _1, boost::ref(snapshotId),
+                        boost::ref(numDocs)),
+            &backgroundPersister, -1, "time", "%d/%b/%Y:%T %z");
+
+        ml::api::CDataProcessor* firstProcessor(&job);
+
+        ml::api::CLineifiedJsonInputParser parser(inputStrm);
+
+        CPPUNIT_ASSERT(parser.readStream(boost::bind(
+            &ml::api::CDataProcessor::handleRecord, firstProcessor, _1)));
+
+        // Ensure the model size stats are up to date
+        job.finalise();
+
+        // Persist the processors' state in the foreground
+        ml::api::CSingleStreamDataAdder foregroundDataAdder(foregroundStreamPtr);
+        CPPUNIT_ASSERT(firstProcessor->persistState(foregroundDataAdder));
+        foregroundSnapshotId = snapshotId;
+
+        // Now persist the processors' state in the background
+        CPPUNIT_ASSERT(firstProcessor->periodicPersistState(backgroundPersister));
+        CPPUNIT_ASSERT(backgroundPersister.startPersist());
+
+        //Increment one of the statistics values
+        ml::core::CStatistics::stat(ml::stat_t::E_MemoryUsage).increment();
+
+        LOG_DEBUG(<< "Before waiting for the background persister to be idle");
+        CPPUNIT_ASSERT(backgroundPersister.waitForIdle());
+        LOG_DEBUG(<< "After waiting for the background persister to be idle");
+        backgroundSnapshotId = snapshotId;
     }
 
     std::string backgroundState = backgroundStream->str();
